docs: add min-width ot button - center align - fix footer alignment

--- a/src/sass/critical.scss
+++ b/src/sass/critical.scss
@@ -27,6 +27,7 @@ nav {
   }
   p > a {
     padding: 1rem;
+    text-align: center;
     em {
       min-width: calc(200rem / 16);
     }
